Stripe integrated with payment status crons and mining api
